Update logo to PNG with transparency and change font to Raleway Regular

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;600&display=swap"
         rel="stylesheet">
 
     <!-- Stylesheet -->
@@ -33,7 +33,7 @@
     <nav class="navbar" id="navbar">
         <div class="container nav-container">
             <div class="logo">
-                <img src="assets/logo.jpg" alt="OrangePulse Logo" class="logo-img">
+                <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
                 <span class="logo-text">OrangePulse</span>
             </div>
             <ul class="nav-menu" id="navMenu">
@@ -767,7 +767,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <img src="assets/logo.jpg" alt="OrangePulse Logo" class="logo-img">
+                        <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
                         <span class="logo-text">OrangePulse <span class="version">v2.3</span></span>
                     </div>
                     <p class="footer-desc">Advanced multi-strategy DCA bot for professional crypto trading automation.
