--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta property="og:description" content="Multi-strategy DCA bot with advanced risk management for crypto trading">
     <meta property="og:type" content="website">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
+
     <title>OrangePulse v2.3 - Advanced Crypto Trading Bot | OrangePulseBot</title>
 
     <!-- Google Fonts -->
