--- a/index.html
+++ b/index.html
@@ -94,120 +94,132 @@
         </div>
     </section>
 
-    <!-- Latest Updates Section -->
-    <section class="updates-section">
-        <div class="container">
-            <div class="updates-header">
-                <span class="updates-badge">✨ Latest Updates</span>
-                <h2 class="section-title">Advanced <span class="gradient-text">Capabilities</span></h2>
-                <p class="section-subtitle">Powerful features that set OrangePulse apart</p>
-            </div>
-
-            <div class="updates-grid">
-                <div class="update-card glass">
-                    <div class="update-icon">⚡</div>
-                    <h3>Manual Mode</h3>
-                    <p><strong>Start when YOU want, not when the market decides.</strong> Activate ultra-fast 1-bar
-                        MicroBreakout at any moment or set a specific price level to trigger automatic entry.</p>
-                    <span class="update-tag">On-Demand Trading</span>
-                </div>
-
-                <div class="update-card glass">
-                    <div class="update-icon">🛡️</div>
-                    <h3>Emergency Safety Orders</h3>
-                    <p>3 additional large orders (MSO) with time-based activation. Your ultimate safety net for black
-                        swan events and extreme drawdowns.</p>
-                    <span class="update-tag">Black Swan Protection</span>
-                </div>
-
-                <div class="update-card glass">
-                    <div class="update-icon">📊</div>
-                    <h3>3-Stage Trailing TP</h3>
-                    <p>Sophisticated trailing system: ARM activates profit protection, BUFFER secures minimum gain,
-                        TRAIL follows peak for maximum upside.</p>
-                    <span class="update-tag">Smart Profit Taking</span>
-                </div>
-
-                <div class="update-card glass">
-                    <div class="update-icon">💎</div>
-                    <h3>TP/SL at Price Levels</h3>
-                    <p>Exit at exact price targets, not just percentages. Set entries and exits at key
-                        support/resistance levels for precision trading.</p>
-                    <span class="update-tag">Price Precision</span>
-                </div>
-
-                <div class="update-card glass">
-                    <div class="update-icon">💰</div>
-                    <h3>Fee Accounting</h3>
-                    <p>Full transparency on all trading costs: Maker fees, Taker fees, and Funding fees. Real-time
-                        tracking in Status Table.</p>
-                    <span class="update-tag">Cost Transparency</span>
-                </div>
-
-                <div class="update-card glass">
-                    <div class="update-icon">🎯</div>
-                    <h3>TP at Last SO</h3>
-                    <p>Preemptive position close instead of final Safety Order. Limits maximum drawdown exposure when
-                        you need it most.</p>
-                    <span class="update-tag">Risk Limiter</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Features Section -->
+    <!-- Key Features Section -->
     <section class="features" id="features">
         <div class="container">
-            <h2 class="section-title">Powerful <span class="gradient-text">Features</span></h2>
+            <h2 class="section-title">Key <span class="gradient-text">Features</span></h2>
             <p class="section-subtitle">Everything you need for professional crypto trading automation</p>
 
             <div class="features-grid">
                 <div class="feature-card glass">
                     <div class="feature-icon">🎯</div>
-                    <h3>Multi-Strategy Entry</h3>
-                    <p>Choose from 4 battle-tested strategies: MeanReversion, TrendPullback, Breakout, and
-                        MicroBreakout. Each optimized for different market conditions.</p>
+                    <h3>4 Battle-Tested Entry Strategies</h3>
+                    <p>Choose the perfect strategy for current market conditions. Each optimized for specific scenarios.
+                    </p>
                     <ul class="feature-list">
-                        <li>Bollinger Bands + RSI</li>
-                        <li>Moving Averages + MACD</li>
-                        <li>Range + Volume analysis</li>
-                        <li>Donchian Channel breakouts</li>
+                        <li>MeanReversion (BB+RSI oversold/overbought)</li>
+                        <li>TrendPullback (EMA200 + MACD confirmation)</li>
+                        <li>Breakout (Range + Volume + Squeeze filters)</li>
+                        <li>MicroBreakout (Donchian ultra-fast entries)</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Manual Mode & Start at Price</h3>
+                    <p><strong>Start when YOU want, not when the market decides.</strong> Ultra-fast 1-bar MicroBreakout
+                        on-demand or price-triggered activation.</p>
+                    <ul class="feature-list">
+                        <li>Instant manual entry override</li>
+                        <li>Price-level triggered activation</li>
+                        <li>Auto-disarm after first TP</li>
                     </ul>
                 </div>
 
                 <div class="feature-card glass">
                     <div class="feature-icon">💰</div>
                     <h3>Smart DCA System</h3>
-                    <p>Advanced Dollar Cost Averaging with configurable Base Order, up to 10 Safety Orders, and 3
-                        Emergency Safety Orders for extreme drawdowns.</p>
+                    <p>Advanced Dollar Cost Averaging with configurable Safety Orders and dynamic ladder re-anchoring.
+                    </p>
                     <ul class="feature-list">
-                        <li>Volume Scale (1.55x default)</li>
-                        <li>Step Scale (1.05x default)</li>
-                        <li>Price Deviation control</li>
-                        <li>Emergency MSO layer</li>
+                        <li>Up to 10 Safety Orders</li>
+                        <li>Volume Scale & Step Scale control</li>
+                        <li>Price Deviation configuration</li>
+                        <li>Dynamic re-anchoring after fills</li>
                     </ul>
                 </div>
 
                 <div class="feature-card glass">
-                    <div class="feature-icon">🎬</div>
-                    <h3>Advanced Exit Systems</h3>
-                    <p>Multi-layer profit protection with % TP, price-based TP/SL, and 3-stage trailing stop
+                    <div class="feature-icon">🛡️</div>
+                    <h3>Emergency Safety Orders (MSO)</h3>
+                    <p>3 additional large orders with time-based activation. Your ultimate safety net for black swan
+                        events and extreme drawdowns.</p>
+                    <ul class="feature-list">
+                        <li>Time-triggered activation</li>
+                        <li>Configurable USD amounts</li>
+                        <li>Activate after standard SO exhaustion</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">📊</div>
+                    <h3>3-Stage Trailing TP</h3>
+                    <p>Sophisticated trailing system: ARM activates, BUFFER protects minimum profit, TRAIL follows peak
                         for maximum gains.</p>
                     <ul class="feature-list">
-                        <li>Trailing TP (ARM → BUFFER → TRAIL)</li>
-                        <li>TP/SL at exact prices</li>
-                        <li>Preemptive TP at Last SO</li>
+                        <li>ARM: Activation threshold</li>
+                        <li>BUFFER: Minimum profit protection</li>
+                        <li>TRAIL: Follow peak from activation + trail %</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">💎</div>
+                    <h3>TP/SL at Price Levels</h3>
+                    <p>Exit at exact price targets, not just percentages. Set entries and exits at key
+                        support/resistance levels for precision trading.</p>
+                    <ul class="feature-list">
+                        <li>Support/resistance integration</li>
+                        <li>Override % TP/SL when needed</li>
+                        <li>Technical analysis precision</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">🎯</div>
+                    <h3>TP at Last SO</h3>
+                    <p>Preemptive position close instead of final Safety Order. Limits maximum drawdown exposure when
+                        you need it most.</p>
+                    <ul class="feature-list">
+                        <li>Cap maximum position size</li>
+                        <li>Prevent final SO fill</li>
+                        <li>Close at breakeven or better</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">💵</div>
+                    <h3>Real-Time Fee Accounting</h3>
+                    <p>Full transparency on all trading costs: Maker fees, Taker fees, and Funding fees. Real-time
+                        tracking in Status Table.</p>
+                    <ul class="feature-list">
+                        <li>Maker/Taker fee tracking</li>
+                        <li>Funding fee accumulation</li>
+                        <li>True PnL calculation</li>
+                    </ul>
+                </div>
+
+                <div class="feature-card glass">
+                    <div class="feature-icon">🔌</div>
+                    <h3>Exchange Integration</h3>
+                    <p>Seamless automation with WunderTrading and 3Commas. JSON alerts with exact USD amounts for
+                        perfect execution.</p>
+                    <ul class="feature-list">
+                        <li>WunderTrading JSON signals</li>
+                        <li>3Commas DCA bot integration</li>
+                        <li>One alert per bar (priority: EXIT > SO > BO)</li>
                     </ul>
                 </div>
 
                 <div class="feature-card glass">
                     <div class="feature-icon">🔧</div>
-                    <h3>Professional Tools</h3>
-                    <p>Complete control with pause/resume, cooldown systems, fee accounting, real-time PnL tracking, and
-                        seamless integrations.</p>
+                    <h3>Professional Controls</h3>
+                    <p>Complete bot management with pause/stop, cooldown systems, and live Status Table dashboard for
+                        full transparency.</p>
                     <ul class="feature-list">
-                        <li>WunderTrading integration</li>
-                        <li>3Commas DCA bots</li>
+                        <li>Pause/Stop bot functionality</li>
+                        <li>Cooldown systems (BO/SO/Exit)</li>
+                        <li>Live Status Table with 15 metrics</li>
                         <li>Fee tracking (Maker/Taker/Funding)</li>
                         <li>Live status dashboard</li>
                     </ul>
