--- a/index.html
+++ b/index.html
@@ -165,37 +165,14 @@
 
                 <div class="feature-card glass">
                     <div class="feature-icon">💎</div>
-                    <h3>TP/SL at Price Levels</h3>
-                    <p>Exit at exact price targets, not just percentages. Set entries and exits at key
-                        support/resistance levels for precision trading.</p>
+                    <h3>Precision Exit Controls</h3>
+                    <p>Exit at exact price levels (support/resistance) or preemptively close before final SO. Full
+                        control over your exit strategy.</p>
                     <ul class="feature-list">
+                        <li>TP/SL at exact price targets (not just %)</li>
+                        <li>TP at Last SO (close before final averaging)</li>
                         <li>Support/resistance integration</li>
-                        <li>Override % TP/SL when needed</li>
-                        <li>Technical analysis precision</li>
-                    </ul>
-                </div>
-
-                <div class="feature-card glass">
-                    <div class="feature-icon">🎯</div>
-                    <h3>TP at Last SO</h3>
-                    <p>Preemptive position close instead of final Safety Order. Limits maximum drawdown exposure when
-                        you need it most.</p>
-                    <ul class="feature-list">
-                        <li>Cap maximum position size</li>
-                        <li>Prevent final SO fill</li>
-                        <li>Close at breakeven or better</li>
-                    </ul>
-                </div>
-
-                <div class="feature-card glass">
-                    <div class="feature-icon">💵</div>
-                    <h3>Real-Time Fee Accounting</h3>
-                    <p>Full transparency on all trading costs: Maker fees, Taker fees, and Funding fees. Real-time
-                        tracking in Status Table.</p>
-                    <ul class="feature-list">
-                        <li>Maker/Taker fee tracking</li>
-                        <li>Funding fee accumulation</li>
-                        <li>True PnL calculation</li>
+                        <li>Cap maximum position size & exposure</li>
                     </ul>
                 </div>
 
@@ -213,15 +190,15 @@
 
                 <div class="feature-card glass">
                     <div class="feature-icon">🔧</div>
-                    <h3>Professional Controls</h3>
-                    <p>Complete bot management with pause/stop, cooldown systems, and live Status Table dashboard for
-                        full transparency.</p>
+                    <h3>Professional Controls & Fee Transparency</h3>
+                    <p>Complete bot management with real-time fee accounting. Track all costs (Maker/Taker/Funding) and
+                        control bot behavior with precision.</p>
                     <ul class="feature-list">
-                        <li>Pause/Stop bot functionality</li>
+                        <li>Real-time fee tracking (Maker/Taker/Funding)</li>
+                        <li>True PnL calculation (post-fees)</li>
+                        <li>Pause/Stop/Resume functionality</li>
                         <li>Cooldown systems (BO/SO/Exit)</li>
-                        <li>Live Status Table with 15 metrics</li>
-                        <li>Fee tracking (Maker/Taker/Funding)</li>
-                        <li>Live status dashboard</li>
+                        <li>Live Status Table (15 metrics)</li>
                     </ul>
                 </div>
             </div>
