--- a/index.html
+++ b/index.html
@@ -56,35 +56,40 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero" id="hero">
+    <section class="hero">
         <div class="hero-bg"></div>
-        <div class="container hero-container">
-            <div class="hero-content">
-                <h1 class="hero-title">
-                    <span class="gradient-text">OrangePulse</span>
-                    <br>Advanced Multi-Strategy DCA Trading Bot
-                </h1>
-                <p class="hero-subtitle">
-                    Bitcoin-powered automated trading with intelligent DCA system, 4 entry strategies, and professional
-                    risk management. Built for TradingView with seamless exchange integration.
-                </p>
-                <div class="hero-cta">
-                    <a href="#contact" class="btn btn-primary btn-lg">Get Started Free</a>
-                    <a href="#strategies" class="btn btn-secondary btn-lg">Explore Strategies</a>
+        <div class="hero-container">
+            <div class="hero-split">
+                <div class="hero-content">
+                    <h1 class="hero-title">
+                        <span class="gradient-text">OrangePulse</span> v3.0<br>
+                        Advanced DCA Trading Bot
+                    </h1>
+                    <p class="hero-subtitle">
+                        Professional-grade automated trading for perpetual futures. 4 battle-tested strategies, smart
+                        DCA with emergency protection, and 3-stage trailing TP.
+                    </p>
+                    <div class="hero-cta">
+                        <a href="#features" class="btn btn-primary">Explore Features</a>
+                        <a href="#integration" class="btn btn-secondary">View Integration</a>
+                    </div>
+                    <div class="hero-stats">
+                        <div class="stat">
+                            <div class="stat-value">4</div>
+                            <div class="stat-label">Entry Strategies</div>
+                        </div>
+                        <div class="stat">
+                            <div class="stat-value">10+</div>
+                            <div class="stat-label">Safety Orders</div>
+                        </div>
+                        <div class="stat">
+                            <div class="stat-value">3-Stage</div>
+                            <div class="stat-label">Trailing TP</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="hero-stats">
-                    <div class="stat">
-                        <div class="stat-number">4</div>
-                        <div class="stat-label">Entry Strategies</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">10+</div>
-                        <div class="stat-label">Safety Orders</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">24/7</div>
-                        <div class="stat-label">Automated Trading</div>
-                    </div>
+                <div class="hero-image">
+                    <img src="hero-chart.png" alt="OrangePulse Trading Chart" class="chart-screenshot">
                 </div>
             </div>
         </div>
