--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-bg"></div>
-        <div class="hero-container">
+        <div class="container hero-container">
             <div class="hero-split">
                 <div class="hero-content">
                     <h1 class="hero-title">
