--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="container nav-container">
-            <div class="logo">
+            <a href="index.html" class="logo">
                 <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
                 <span class="logo-text">OrangePulse</span>
-            </div>
+            </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#features" class="nav-link">Features</a></li>
                 <li><a href="#strategies" class="nav-link">Strategies</a></li>
