--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="OrangePulse v2.3 - Advanced multi-strategy DCA trading bot for cryptocurrency markets. Featuring 4 entry strategies, smart risk management, and seamless exchange integration.">
+        content="OrangePulse - Advanced multi-strategy DCA trading bot for cryptocurrency markets. Featuring 4 entry strategies, smart risk management, and seamless exchange integration.">
     <meta name="keywords"
         content="crypto trading bot, DCA bot, TradingView bot, automated trading, cryptocurrency, bitcoin trading">
     <meta name="author" content="OrangePulseBot">
 
     <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="OrangePulse v2.3 - Your Ultimate Crypto Trading Assistant">
+    <meta property="og:title" content="OrangePulse - Your Ultimate Crypto Trading Assistant">
     <meta property="og:description" content="Multi-strategy DCA bot with advanced risk management for crypto trading">
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <title>OrangePulse v2.3 - Advanced Crypto Trading Bot | OrangePulseBot</title>
+    <title>OrangePulse - Advanced Crypto Trading Bot | OrangePulseBot</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
             <div class="hero-split">
                 <div class="hero-content">
                     <h1 class="hero-title">
-                        <span class="gradient-text">OrangePulse</span> v3.0<br>
+                        <span class="gradient-text">OrangePulse</span><br>
                         Advanced DCA Trading Bot
                     </h1>
                     <p class="hero-subtitle">
@@ -559,7 +559,7 @@
 
                 <div class="integration-card glass">
                     <div class="integration-logo">🔔</div>
-                    <h3>WunderTrading</h3>
+                    <h3>Wunder<br>Trading</h3>
                     <p>Send JSON alerts for automated order execution. Supports quote/base/percent amounts.</p>
                     <span class="integration-badge">Alert System</span>
                 </div>
@@ -827,7 +827,7 @@
         <div class="container">
             <div class="contact-content glass">
                 <h2>Ready to Get Started?</h2>
-                <p>Download OrangePulse v2.3 and take your crypto trading to the next level</p>
+                <p>Request a TradingView invite and take your crypto trading to the next level</p>
 
                 <div class="contact-grid">
                     <div class="contact-option">
@@ -838,9 +838,9 @@
                     </div>
 
                     <div class="contact-option">
-                        <h3>📜 Pine Script</h3>
-                        <p>Full source code for TradingView. Copy-paste ready with inline documentation.</p>
-                        <a href="OrangePulseBot.md" download class="btn btn-secondary">Get Script</a>
+                        <h3>📺 TradingView Script</h3>
+                        <p>Get access to OrangePulse via TradingView invite. Contact us to request access.</p>
+                        <a href="#contact" class="btn btn-secondary">Request Invite</a>
                     </div>
 
                     <div class="contact-option">
@@ -870,7 +870,7 @@
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
-                        <span class="logo-text">OrangePulse <span class="version">v2.3</span></span>
+                        <span class="logo-text">OrangePulse</span>
                     </div>
                     <p class="footer-desc">Advanced multi-strategy DCA bot for professional crypto trading automation.
                     </p>
@@ -880,7 +880,7 @@
                     <h4>Resources</h4>
                     <ul class="footer-links">
                         <li><a href="VibeBot v2.3 User Manual.pdf" download>User Manual</a></li>
-                        <li><a href="OrangePulseBot.md" download>Pine Script</a></li>
+                        <li><a href="#contact">Request Script Access</a></li>
                         <li><a href="#strategies">Strategies Guide</a></li>
                         <li><a href="#faq">FAQ</a></li>
                     </ul>
