--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-bg"></div>
+        <video autoplay muted loop playsinline class="hero-video">
+            <source src="trading.mp4" type="video/mp4">
+        </video>
+        <div class="hero-overlay"></div>
         <div class="container hero-container">
             <div class="hero-split">
                 <div class="hero-content">
