--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="container nav-container">
             <a href="index.html" class="logo">
                 <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
-                <span class="logo-text">OrangePulse</span>
+                <span class="logo-text"><span class="orange-part">Orange</span><span
+                        class="pulse-part">Pulse</span></span>
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#features" class="nav-link">Features</a></li>
@@ -873,7 +874,8 @@
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img src="assets/logo.png" alt="OrangePulse Logo" class="logo-img">
-                        <span class="logo-text">OrangePulse</span>
+                        <span class="logo-text"><span class="orange-part">Orange</span><span
+                                class="pulse-part">Pulse</span></span>
                     </div>
                     <p class="footer-desc">Advanced multi-strategy DCA bot for professional crypto trading automation.
                     </p>
