--- a/index.html
+++ b/index.html
@@ -241,12 +241,8 @@
                         </div>
                     </div>
                     <div class="strategy-visual">
-                        <div class="chart-placeholder">
-                            <div class="chart-line"></div>
-                            <div class="bb-upper"></div>
-                            <div class="bb-lower"></div>
-                            <div class="entry-point long"></div>
-                        </div>
+                        <img src="assets/meanreversion-strategy.png" alt="MeanReversion Strategy Example"
+                            class="strategy-screenshot">
                     </div>
                 </div>
 
