--- a/index.html
+++ b/index.html
@@ -273,12 +273,8 @@
                         </div>
                     </div>
                     <div class="strategy-visual">
-                        <div class="chart-placeholder">
-                            <div class="chart-line trend"></div>
-                            <div class="ma-200"></div>
-                            <div class="ma-20"></div>
-                            <div class="entry-point pullback"></div>
-                        </div>
+                        <img src="assets/trendpullback-strategy.png" alt="TrendPullback Strategy Example"
+                            class="strategy-screenshot">
                     </div>
                 </div>
 
@@ -309,12 +305,8 @@
                         </div>
                     </div>
                     <div class="strategy-visual">
-                        <div class="chart-placeholder">
-                            <div class="chart-line range"></div>
-                            <div class="resistance"></div>
-                            <div class="support"></div>
-                            <div class="entry-point breakout"></div>
-                        </div>
+                        <img src="assets/breakout-strategy.png" alt="Breakout Strategy Example"
+                            class="strategy-screenshot">
                     </div>
                 </div>
 
