--- a/index.html
+++ b/index.html
@@ -337,12 +337,8 @@
                         </div>
                     </div>
                     <div class="strategy-visual">
-                        <div class="chart-placeholder">
-                            <div class="chart-line micro"></div>
-                            <div class="donchian-high"></div>
-                            <div class="donchian-low"></div>
-                            <div class="entry-point micro"></div>
-                        </div>
+                        <img src="assets/microbreakout-strategy.png" alt="MicroBreakout Strategy Example"
+                            class="strategy-screenshot">
                     </div>
                 </div>
             </div>
