--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#dca" class="nav-link">DCA System</a></li>
                 <li><a href="#integration" class="nav-link">Integration</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
-                <li><a href="#contact" class="nav-link btn-primary">Get Started</a></li>
+                <li><a href="#contact" class="nav-link btn-outline">Get Started</a></li>
             </ul>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
                 <span></span>
@@ -79,16 +79,24 @@
                     </div>
                     <div class="hero-stats">
                         <div class="stat">
-                            <div class="stat-value">4</div>
-                            <div class="stat-label">Entry Strategies</div>
+                            <div class="stat-value">1-3%</div>
+                            <div class="stat-label">Monthly Return</div>
                         </div>
                         <div class="stat">
-                            <div class="stat-value">10+</div>
-                            <div class="stat-label">Safety Orders</div>
+                            <div class="stat-value">Multi</div>
+                            <div class="stat-label">Exchange</div>
                         </div>
                         <div class="stat">
-                            <div class="stat-value">3-Stage</div>
-                            <div class="stat-label">Trailing TP</div>
+                            <div class="stat-value">v6</div>
+                            <div class="stat-label">Pine Script</div>
+                        </div>
+                        <div class="stat">
+                            <div class="stat-value">15+</div>
+                            <div class="stat-label">Live Metrics</div>
+                        </div>
+                        <div class="stat">
+                            <div class="stat-value">24/7</div>
+                            <div class="stat-label">Automated</div>
                         </div>
                     </div>
                 </div>
