--- a/index.html
+++ b/index.html
@@ -830,13 +830,14 @@
                         <h3>📄 User Manual</h3>
                         <p>Comprehensive guide with setup instructions, strategy explanations, and optimization tips.
                         </p>
-                        <a href="VibeBot v2.3 User Manual.pdf" download class="btn btn-secondary">Download PDF</a>
+                        <a href="OrangePulse_v3.0_User_Manual.pdf" download class="btn btn-secondary">Download PDF</a>
                     </div>
 
+
                     <div class="contact-option">
-                        <h3>📺 TradingView Script</h3>
-                        <p>Get access to OrangePulse via TradingView invite. Contact us to request access.</p>
-                        <a href="#contact" class="btn btn-secondary">Request Invite</a>
+                        <h3>📧 Contact Support</h3>
+                        <p>Have questions? Need help with setup? Reach out to our support team.</p>
+                        <a href="mailto:support@orangepulse.net" class="btn btn-secondary">support@orangepulse.net</a>
                     </div>
 
                     <div class="contact-option">
@@ -876,7 +877,7 @@
                 <div class="footer-col">
                     <h4>Resources</h4>
                     <ul class="footer-links">
-                        <li><a href="VibeBot v2.3 User Manual.pdf" download>User Manual</a></li>
+                        <li><a href="OrangePulse_v3.0_User_Manual.pdf" download>User Manual</a></li>
                         <li><a href="#contact">Request Script Access</a></li>
                         <li><a href="#strategies">Strategies Guide</a></li>
                         <li><a href="#faq">FAQ</a></li>
