--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 </div>
 
                 <div class="integration-card glass">
-                    <div class="integration-logo">💱</div>
+                    <div class="integration-logo">🚀</div>
                     <h3>Major Exchanges</h3>
                     <p>Works with Binance, Bybit, OKX, and any exchange supported by WunderTrading or 3Commas.</p>
                     <span class="integration-badge">Via Integrations</span>
@@ -644,13 +644,6 @@
                     <h3>Monitor Status Table</h3>
                     <p>Regularly check the live Status Table to track position health, unrealized PnL, fees, and SO fill
                         levels. Early awareness prevents surprises.</p>
-                </div>
-
-                <div class="tip-card glass">
-                    <div class="tip-icon">🚨</div>
-                    <h3>Set MSO Dates Wisely</h3>
-                    <p>Configure Emergency SO timestamps far in the future (e.g., 2050). Only adjust during active
-                        positions if extreme drawdown protection is needed.</p>
                 </div>
 
                 <div class="tip-card glass">
