--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="#strategies" class="nav-link">Strategies</a></li>
                 <li><a href="#dca" class="nav-link">DCA System</a></li>
                 <li><a href="#integration" class="nav-link">Integration</a></li>
+                <li><a href="#pricing" class="nav-link">Pricing</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
                 <li><a href="#contact" class="nav-link btn-outline">Get Started</a></li>
             </ul>
@@ -658,6 +659,81 @@
                     <h3>Never Risk More Than You Can Afford</h3>
                     <p>Automated trading is powerful but risky. Only trade with capital you can afford to lose. Set
                         strict budget limits and stick to your risk management rules.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pricing Section -->
+    <section class="pricing-section" id="pricing">
+        <div class="container">
+            <h2 class="section-title">Choose Your <span class="gradient-text">Plan</span></h2>
+            <p class="section-subtitle">Get unlimited access to OrangePulse with flexible pricing options</p>
+
+            <div class="pricing-grid">
+                <!-- Monthly Plan -->
+                <div class="pricing-card glass">
+                    <div class="pricing-badge">Most Flexible</div>
+                    <h3 class="pricing-title">Monthly</h3>
+                    <div class="pricing-price">
+                        <span class="price-currency">$</span>
+                        <span class="price-amount">99</span>
+                        <span class="price-period">/month</span>
+                    </div>
+                    <p class="pricing-description">Perfect for testing and short-term trading campaigns</p>
+
+                    <ul class="pricing-features">
+                        <li>✓ Full bot access</li>
+                        <li>✓ All 4 trading strategies</li>
+                        <li>✓ Quick Start Guide</li>
+                        <li>✓ TradingView script invite</li>
+                        <li>✓ Priority email support</li>
+                        <li>✓ Monthly updates</li>
+                        <li>✓ Cancel anytime</li>
+                    </ul>
+
+                    <button class="btn btn-primary btn-lg pricing-cta" data-plan="monthly">
+                        Start Monthly Plan
+                    </button>
+
+                    <p class="pricing-note">Billed monthly • Cancel anytime</p>
+                </div>
+
+                <!-- Lifetime Plan -->
+                <div class="pricing-card glass pricing-featured">
+                    <div class="pricing-badge featured">Best Value</div>
+                    <h3 class="pricing-title">Lifetime</h3>
+                    <div class="pricing-price">
+                        <span class="price-currency">$</span>
+                        <span class="price-amount">599</span>
+                        <span class="price-period">once</span>
+                    </div>
+                    <p class="pricing-description">One-time payment for unlimited lifetime access</p>
+
+                    <ul class="pricing-features">
+                        <li>✓ <strong>Lifetime</strong> bot access</li>
+                        <li>✓ All 4 trading strategies</li>
+                        <li>✓ Complete User Manual</li>
+                        <li>✓ TradingView script invite</li>
+                        <li>✓ Priority email support</li>
+                        <li>✓ <strong>Free updates forever</strong></li>
+                        <li>✓ <strong>Private Discord access</strong></li>
+                        <li>✓ <strong>Save $594 vs 6 months</strong></li>
+                    </ul>
+
+                    <button class="btn btn-primary btn-lg pricing-cta" data-plan="lifetime">
+                        Get Lifetime Access
+                    </button>
+
+                    <p class="pricing-note">One-time payment • Lifetime updates</p>
+                </div>
+            </div>
+
+            <div class="pricing-guarantee glass">
+                <div class="guarantee-icon">🛡️</div>
+                <div class="guarantee-content">
+                    <h4>30-Day Money-Back Guarantee</h4>
+                    <p>Not satisfied? Get a full refund within 30 days, no questions asked.</p>
                 </div>
             </div>
         </div>
