--- a/index.html
+++ b/index.html
@@ -692,9 +692,10 @@
                         <li>✓ Cancel anytime</li>
                     </ul>
 
-                    <button class="btn btn-primary btn-lg pricing-cta" data-plan="monthly">
+                    <a href="https://buy.stripe.com/test_14A3cx94u3uo7RZ4uz5Ne00"
+                        class="btn btn-primary btn-lg pricing-cta">
                         Start Monthly Plan
-                    </button>
+                    </a>
 
                     <p class="pricing-note">Billed monthly • Cancel anytime</p>
                 </div>
@@ -721,9 +722,10 @@
                         <li>✓ <strong>Save $594 vs 6 months</strong></li>
                     </ul>
 
-                    <button class="btn btn-primary btn-lg pricing-cta" data-plan="lifetime">
+                    <a href="https://buy.stripe.com/test_6oU5kF0xY0icb4b5yD5Ne01"
+                        class="btn btn-primary btn-lg pricing-cta">
                         Get Lifetime Access
-                    </button>
+                    </a>
 
                     <p class="pricing-note">One-time payment • Lifetime updates</p>
                 </div>
