--- a/index.html
+++ b/index.html
@@ -692,8 +692,7 @@
                         <li>✓ Cancel anytime</li>
                     </ul>
 
-                    <a href="https://buy.stripe.com/test_14A3cx94u3uo7RZ4uz5Ne00"
-                        class="btn btn-primary btn-lg pricing-cta">
+                    <a href="https://buy.stripe.com/6oU7sM6yGeLAgDSfLd9Zm01" class="btn btn-primary btn-lg pricing-cta">
                         Start Monthly Plan
                     </a>
 
@@ -722,8 +721,7 @@
                         <li>✓ <strong>Save $594 vs 6 months</strong></li>
                     </ul>
 
-                    <a href="https://buy.stripe.com/test_6oU5kF0xY0icb4b5yD5Ne01"
-                        class="btn btn-primary btn-lg pricing-cta">
+                    <a href="https://buy.stripe.com/7sYdRa1emavkafuaqT9Zm00" class="btn btn-primary btn-lg pricing-cta">
                         Get Lifetime Access
                     </a>
 
