--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     <ul class="pricing-features">
                         <li>✓ Full bot access</li>
                         <li>✓ All 4 trading strategies</li>
-                        <li>✓ Quick Start Guide</li>
+                        <li>✓ Complete User Manual</li>
                         <li>✓ TradingView script invite</li>
                         <li>✓ Priority email support</li>
                         <li>✓ Monthly updates</li>
@@ -717,7 +717,7 @@
                         <li>✓ TradingView script invite</li>
                         <li>✓ Priority email support</li>
                         <li>✓ <strong>Free updates forever</strong></li>
-                        <li>✓ <strong>Private Discord access</strong></li>
+
                         <li>✓ <strong>Save $594 vs 6 months</strong></li>
                     </ul>
 
